[tool.poetry]
name = "reggie"
version = "0.1.0"
description = "A Regular Expression Pattern search parser on graph structures"
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
antlr4 = "^4.9.1"
networkx = "^2.5"
automata-lib = "latest"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
